[project]
name = "rashdf"
description = "Read data from HEC-RAS HDF files."
readme = "README.md"
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]
requires-python = ">=3.11"
version = "0.12.0"
dependencies = [
    "h5py",
    "geopandas>=1.0",
    "pyarrow",
    "xarray",
    "pandas>=2.0"
]

[project.optional-dependencies]
dev = [
    "pre-commit",
    "ruff",
    "pytest",
    "pytest-cov",
    "kerchunk>=0.2.9",
    "zarr>=3.0",
    "dask",
    "fsspec",
    "s3fs",
    "fiona>=1.10",
    "numcodecs>=0.15",
    "rioxarray",
]
docs = ["sphinx", "numpydoc", "sphinx_rtd_theme"]

[project.urls]
repository = "https://github.com/fema-ffrd/rashdf"

[project.scripts]
rashdf = "cli:main"

[tool.pytest.ini_options]
pythonpath = "src"
testpaths = "tests"

[tool.ruff.lint]
select = ["D"]

[tool.ruff.lint.pydocstyle]
convention = "numpy"

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["D"]
"docs/**" = ["D"]
